fix: bam notation & visible block

--- a/css/style.css
+++ b/css/style.css
@@ -428,7 +428,7 @@ template {
   line-height: 18px;
 }
 
-.navbar-menu__item--mobile_visible {
+.navbar-menu__item--mobile--visible {
   display: none;
 }
 
@@ -1590,17 +1590,17 @@ iframe {
   body {
     padding-top: 72px;
   }
-  .navbar--mobile_fixed {
+  .navbar--fixed {
     position: fixed;
     left: 0;
     top: 0;
     right: 0;
     z-index: 99;
   }
-  .navbar__user--mobile_hidden, .navbar__search--mobile_hidden {
+  .navbar__user--mobile--hidden, .navbar__search--mobile--hidden {
     display: none;
   }
-  .navbar__user--mobile_visible, .navbar__search--mobile_visible {
+  .navbar__user--mobile--visible, .navbar__search--mobile--visible {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1624,7 +1624,10 @@ iframe {
     padding-top: 30px;
   }
   .navbar-bottom--visible {
+    padding-top: 11px;
+    margin-top: -8px;
     display: block;
+    max-width: 100%;
   }
   .navbar-menu {
     -webkit-box-orient: vertical;
@@ -1635,7 +1638,7 @@ iframe {
   .navbar-menu__item {
     margin-bottom: 20px;
   }
-  .navbar-menu__item--mobile_visible {
+  .navbar-menu__item--mobile--visible {
     display: block;
   }
   .menu-button {
