--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -147,18 +147,17 @@
   body
     padding-top: 72px
   .navbar
-    &--mobile
-      &_fixed
-        position: fixed
-        left: 0
-        top: 0
-        right: 0
-        z-index: 99
+    &--fixed
+      position: fixed
+      left: 0
+      top: 0
+      right: 0
+      z-index: 99
     &__user, &__search
       &--mobile
-        &_hidden
+        &--hidden
           display: none
-        &_visible
+        &--visible
           display: flex
     &__user
       flex-direction: column
@@ -172,13 +171,16 @@
       top: 78px
       padding-top: 30px
       &--visible
+        padding-top: 11px
+        margin-top: -8px
         display: block
+        max-width: 100%
     &-menu
       flex-direction: column
       &__item
         margin-bottom: 20px
         &--mobile
-          &_visible
+          &--visible
             display: block
   .menu
     &-button
